@@ -15,6 +15,7 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Correct sld generated from mapserver classes (#3133) 
 
 Version 5.6.0-beta3 (2009-10-07):
 ---------------------------------
